--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,19 @@
+a:link {
+    color: #d1bc62;
+}
+
+a:visited {
+    color: #c37432;
+}
+
 body {
     background-color: #2b2b2b;
     color: #A9B7C6;
     margin: 20px;
+}
+
+h1 {
+    color: #AE8ABE;
 }
 
 img {
@@ -12,16 +24,13 @@ img {
     margin-right: auto;
 }
 
-a:link {
-    color: #d1bc62;
+pre {
+    white-space: pre-wrap;
 }
 
-a:visited {
-    color: #c37432;
-}
-
-h1 {
-    color: #AE8ABE;
+.caption {
+    text-align: center;
+    font-style: italic;
 }
 
 .feed {
@@ -35,9 +44,4 @@ h1 {
     background: #3c3f41;
     margin-left: 20px;
     width: 300px;
-}
-
-.caption {
-    text-align: center;
-    font-style: italic;
 }
