--- a/styles.css
+++ b/styles.css
@@ -49,5 +49,6 @@ pre {
     float: right;
     background: #3c3f41;
     margin-left: 1%;
+    min-height: 482px; /*TODO: find out how to get the layout to reflow after the links load*/
     width: 29%;
 }
